--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Universidad Argentina, Universidad Publica, UN..., un.., Universidad Nacional de..., Noticias UN..., Noticias un..., UN... feriado, UN... redes">
+    <meta name="description" content="Bienvenidos a UN..., somos una Universidad de confianza, llevamos a mucha gente a cumplir sus sueños de .... Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus accusantium pariatur reiciendis et voluptatum neque corporis dolore, tenetur blanditiis, animi provident similique dolor architecto labore quam! Quos alias distinctio sint. 
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
+
     <!--link framework-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -68,6 +72,7 @@
 
 
 <div class="fondoMain">
+    
 <main>
     
     <!--noticia actual n1-->
