--- a/pages/egresado.html
+++ b/pages/egresado.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Universidad Argentina, Universidad Publica, UN..., un.., Universidad Nacional de..., UN... expierencias, UN... review, UN... alumnos, UN... redes">
-    <meta name="description" content="te dejamos algunas review de nuestros exalumnos y las posibilidades que te dejamos una vez te hayas egresado>
+    <meta name="description" content="te dejamos algunas review de nuestros exalumnos y las posibilidades que te dejamos una vez te hayas egresado">
 
     <!--link framework-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
