--- a/pages/Inscripciones.html
+++ b/pages/Inscripciones.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Universidad Argentina, Universidad Publica, UN..., un.., Universidad Nacional de...,UN... inscripciones, un... Inscripciones, UN... fechas, UN... redes">
+    <meta name="keywords" content="Universidad Argentina, Universidad Publica, UNEC, unec, Universidad Nacional de...,UNEC inscripciones, unec Inscripciones, UNEC fechas, UNEC redes">
     <meta name="description" content="¿Te sumas a nosotros? llena un formulario y vas a recibir mas informacion.">
 
 
      <!--link framework-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>(-UN..-) Inscripciones_2023</title>
+    <title>(-UNEC-) Inscripciones_2023</title>
     <link rel="stylesheet" href="../css/inscripciones.css">
 </head>
 <body>
