--- a/pages/carreras.html
+++ b/pages/carreras.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Universidad Argentina, Universidad Publica, UN..., un.., Universidad Nacional de..., UN... carreras, un... carreras, un.. materias, UN... redes">
+    <meta name="keywords" content="Universidad Argentina, Universidad Publica, UNEC, unec, Universidad Nacional de..., UNEC carreras, unec carreras, unec materias, UNEC redes">
     <meta name="description" content="Tenemos variedad de carreras que cualquier persona puede postularse, entra e investiga sobre la carrera de tus sueños.">
 
     <!--link framework-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>(-UN..-) Carreras </title>
+    <title>(-UNEC-) Carreras </title>
     <link rel="stylesheet" href="../css/carreras.css">
 </head>
 <body>
