--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Universidad Argentina, Universidad Publica, UN..., un.., Universidad Nacional de..., Noticias UN..., que es UN..., UN... historia, UN... redes">
+    <meta name="keywords" content="Universidad Argentina, Universidad Publica, UNEC, unec, Universidad Nacional de..., Noticias UNEC, que es UNEC, UNEC historia, UNEC redes">
     <meta name="description" content="¿Quieres saber mas sobre nosotros? aca te dejamos mas informacion donde te contamos mas mientras nuestra historia y logros.">
 
 
      <!--link framework-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>(-UN..-) Sobre_Nosotros</title>
+    <title>(-UNEC-) Sobre_Nosotros</title>
     <link rel="stylesheet" href="../css/nosotros.css">
 </head>
 <body>
