cambios y info en la hoja egresados

--- a/pages/egresado.html
+++ b/pages/egresado.html
@@ -86,7 +86,7 @@
                 <div class="hojas">
                     <img src="../imagenes/fotoCarnet3.jpg" alt="foto persona"class="fotoCarnet">
                     <div class="texto">
-                        <h2> review1</h2>
+                        <h2> Marta Gomez -estudiante de ingenieria en sistemas-</h2>
                         <p class="review">Llevo 4 años de mi vida en esta facultad y cada día me enamoro mas. Espero pasar muchos años más. Si se quiere ser buen ingeniero es el mejor lugar para aprender y divulgar este hermoso estilo de vida.
                         </p>
                     </div>
@@ -96,7 +96,7 @@
                 <div class="hojas">
                     <img src="../imagenes/fotoCarnet2.jpg" alt="foto persona" class="fotoCarnet">
                     <div class="texto">
-                        <h2> review1</h2>
+                        <h2> Claudia Diaz -estudiante de ingenieria mecanica-</h2>
                         <p class="review">Como la mejor escuela pública de la región, no decepciona en absoluto. La accesibilidad la convierte en una gran escuela a la que ir, y la gran reputación de la mayoría de sus profesores hace que en general sea una gran experiencia académica. Algo a mejorar es que el programa está demasiado enfocado en la teoria y debería abarcar mas las practicas.
                         </p>
                     </div> 
@@ -106,7 +106,7 @@
                 <div class="hojas">                    
                     <img src="../imagenes/fotoCarnet1.jpg" alt="foto persona"class="fotoCarnet">
                     <div class="texto">
-                        <h2> review1</h2>
+                        <h2> Raul Gonzalez -estudiante de ingenieria electronica-</h2>
                         <p class="review">
                             Enseñanza de calidad, respeto y dedicacion  y preocupacion por el  alumno, de todas las autoridades y de los decentes
                         </p>
