errores que me aparecian en main.css y me rompia el server

--- a/pages/carreras.html
+++ b/pages/carreras.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-    <div class="contenedor">
+    <div class="contenedorCarreras">
 
     
     <!--INICIO DEL MENU EN UN ENCABEZADO-->
