--- a/pages/egresado.html
+++ b/pages/egresado.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   
-    <div class="contenedor">
+    <div class="contenedorEgresado">
 
         <header >
             <nav class="navbar navbar-expand-md navbar-light  color-encabezado">
