--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -17,7 +17,7 @@
 <body>
     
 
-<div class="contenedor">
+<div class="contenedorNosotros">
     
         <!--INICIO DEL MENU EN UN ENCABEZADO-->
         <header >
