complicaciones con la subida al servidor

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -123,7 +123,7 @@
         </div>
     
          <!--Nuestras INFO-->
-         <footer>
+         <footer class="footerNosotros">
             <div class="pieDePagina">
                     <!--aca puede ir la iframe-->
                 <div class="subPieDePagina"> Direccion: capital fedeal, calle... entre ... y ...</div>
